Add middle_name and name_suffix to Participant model
[#138383687]
