# public/swagger.yaml
@@ -23,7 +23,11 @@ definitions:
         type: string
       first_name:
         type: string
+      middle_name:
+        type: string
       last_name:
+        type: string
+      name_suffix:
         type: string
       gender:
         type: string
